--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 .env
 
 # Test binary, built with `go test -c`
-*.test
+# *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
